<resources>
    <string name="app_name">AlertApp</string>

    <string name="widget_service_description">Widget refresh service</string>
    
    <string name="notification_channel_id">1120</string>
    <string name="notification_channel_name">AlertApp notification channel</string>
    <string name="notification_channel_description">This channel is used for sending notifications</string>

    <string name="refresh_service_notification_id">1121</string>
    <string name="refresh_service_notification_title">Refresh service is working</string>
    <string name="refresh_service_notification_content">Fetching map information&#8230;</string>

    <string name="alert_notification_id">1122</string>

    <string name="alert_map">Карта повітряних тривог</string>
    <string name="data_for_date">Дані станом на:</string>
    <string name="refresh">Оновити</string>

    <string name="air_alert">Тривога</string>
    <string name="no_alert">Відбій</string>
    <string name="no_info">Немає даних</string>

    <string name="settings">Налаштування</string>
    <string name="auto_update">Автооновлення</string>
    <string name="every">Кожні</string>
    <string name="min">%d хв.</string>
    <string name="receive_notification">Отримувати сповіщення</string>
    <string name="sound">Звук</string>
    <string name="vibration">Вібрація</string>
    <string name="from_who">Від кого?</string>
    <string name="save">Зберегти</string>

    <string name="state_list">Список областей</string>
    <string name="select_territories_you_want_observe">Оберіть об\'єкти, від яких хочете отримувати сповіщення</string>
    <string name="clear_choice">Очистити вибір</string>
    
    <string name="air_alert_">Повітряна тривога!</string>
    <string name="go_to_the_refuge">Перейдіть у сховище</string>

    <string name="air_alert_is_stopped">Відбій повітряної тривоги!</string>
    <string name="get_back_to_business">Повертайтесь до справ</string>
</resources>