<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/BigText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_map" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_for_date" />

                <TextView
                    android:id="@+id/tv_refresh_date"
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_map_holder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/calm" />

                <TextView
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/no_alert" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/alert" />

                <TextView
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/air_alert" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center">

                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/noInfo" />

                <TextView
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/no_info" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_settings"
            style="@style/BigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_plate_top"
            android:backgroundTint="@color/on_ground"
            android:padding="20dp"
            android:text="@string/settings" />
    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>