<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:background="@drawable/card_plate_top"
        android:backgroundTint="@color/on_ground"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/BigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_list" />

        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/select_territories_you_want_observe"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/btn_clear_choice"
            style="@style/MainText"
            android:gravity="end"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_choice" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_states"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_select_territory" />
    </LinearLayout>
</LinearLayout>