<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_plate_top"
    android:backgroundTint="@color/on_ground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/BigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:paddingBottom="15dp"
            android:text="@string/settings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_auto_update"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/auto_update" />

            <TextView
                android:id="@+id/tv_refresh_time"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/grey" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_repeat_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="75">

            <TextView
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/every" />

            <RadioButton
                android:id="@+id/rb_min_period"
                style="@style/MainText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="25"
                android:checked="true"
                android:text="@string/min" />

            <RadioButton
                android:id="@+id/rb_middle_period"
                style="@style/MainText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="25"
                android:text="@string/min" />

            <RadioButton
                android:id="@+id/rb_max_period"
                style="@style/MainText"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="25"
                android:text="@string/min" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_notification"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/receive_notification" />

            <CheckBox
                android:id="@+id/chk_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:button="@drawable/sound_check"
                android:layout_marginStart="10dp"/>

            <CheckBox
                android:id="@+id/chk_vibration"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:button="@drawable/ic_vibration"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_select_states"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/card_frame_plate"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/more_details"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_save"
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/card_frame_plate"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/save"
        android:visibility="visible" />
</FrameLayout>